# minesweeper

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  main.cpp
lib/: CMakeLists.txt
src/: Command.cpp  Command.hpp  Game.cpp  Game.hpp  GameState.hpp  Utils.hpp  Vector2.hpp
src/Controller/: IController.hpp  TextCommandController.cpp  TextCommandController.hpp
src/Map/: Cell.hpp  Coordinate.hpp  IMap.hpp  IMapFactory.cpp  IMapFactory.hpp  Map.cpp  Map.hpp
src/Model/: CellInfo.hpp  GameModel.cpp  GameModel.hpp  IGameModel.hpp
src/View/: ConsoleColors.hpp  ConsoleCommandReader.cpp  ConsoleCommandReader.hpp  ConsoleGameView.cpp  ConsoleGameView.hpp  CursesGameView.cpp  CursesGameView.hpp  IGameView.hpp
src/ViewModel/: CellInfo.hpp  GameViewModel.cpp  GameViewModel.hpp  IGameViewModel.hpp
